# Copyright (C) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//foundation/multimedia/media_library/media_library.gni")
group("test") {
  testonly = true

  deps = [
    "unittest/album_count_cover_test:AlbumCountCoverTest",
    "unittest/background_cloud_batch_selected_file_processor_test:unittest",
    "unittest/background_cloud_file_processor_test:unittest",
    "unittest/heif_transcoding_check_utils_test:unittest",
    "unittest/media_albums_controller_service_test:unittest",
    "unittest/media_albums_refresh_test:unittest",
    "unittest/media_analysis_extension_test:unittest",
    "unittest/media_asset_change_request_impl_test:unittest",
    "unittest/media_asset_test:unittest",
    "unittest/media_assets_controller_service_test:unittest",
    "unittest/media_datashare_ext_ability_test:unittest",
    "unittest/media_event_test:unittest",
    "unittest/media_library_asset_helper_capi_test:unittest",
    "unittest/media_library_asset_manager_test:unittest",
    "unittest/media_library_cloud_sync_test:unittest",
    "unittest/media_library_manager_test:unittest",
    "unittest/media_notification_register_manager_test:unittest",
    "unittest/media_notification_test:unittest",
    "unittest/media_permission_check_test:unittest",
    "unittest/media_permission_test:unittest",
    "unittest/media_refresh:unittest",
    "unittest/media_visit_count_manager_test:unittest",
    "unittest/medialib_statistic_test:unittest",
    "unittest/medialibrary_album_operation_test:unittest",
    "unittest/medialibrary_album_source_test:unittest",
    "unittest/medialibrary_analysis_album_operation_test:unittest",
    "unittest/medialibrary_app_uri_permission_operations_test:unittest",
    "unittest/medialibrary_app_uri_sensitive_operations_test:unittest",
    "unittest/medialibrary_astc_phase_test:unittest",
    "unittest/medialibrary_audio_operations_test:unittest",
    "unittest/medialibrary_client_report_test:unittest",
    "unittest/medialibrary_cloud_asset_download_test:unittest",
    "unittest/medialibrary_cloud_asset_batch_download_test:unittest",
    "unittest/medialibrary_cloud_enhancement_test:unittest",
    "unittest/medialibrary_common_utils_test:unittest",
    "unittest/medialibrary_cover_position_parser_test:unittest",
    "unittest/medialibrary_custom_restore_test:unittest",
    "unittest/medialibrary_datamanager_test:unittest",
    "unittest/medialibrary_dfx_test:unittest",
    "unittest/medialibrary_fuse_test:unittest",
    "unittest/medialibrary_handler_test:unittest",
    "unittest/medialibrary_helper_test:unittest",
    "unittest/medialibrary_location_test:unittest",
    "unittest/medialibrary_manager_utils_test:unittest",
    "unittest/medialibrary_mimetype_test:unittest",
    "unittest/medialibrary_multistages_capture_test:unittest",
    "unittest/medialibrary_object_test:unittest",
    "unittest/medialibrary_photo_enhance_test:unittest",
    "unittest/medialibrary_photo_operations_test:unittest",
    "unittest/medialibrary_ptp_operations_test:unittest",
    "unittest/medialibrary_queryperf_test:unittest",
    "unittest/medialibrary_rdb_callback_test:unittest",
    "unittest/medialibrary_rdb_test:unittest",
    "unittest/medialibrary_rdb_utils_test:unittest",
    "unittest/medialibrary_restore_test:unittest",
    "unittest/medialibrary_scanner_db_test:unittest",
    "unittest/medialibrary_scanner_test:unittest",
    "unittest/medialibrary_search_test:unittest",
    "unittest/medialibrary_shooting_mode_album_test:unittest",
    "unittest/medialibrary_smartalbum_map_operations_test:unittest",
    "unittest/medialibrary_smartalbum_operations_test:unittest",
    "unittest/medialibrary_story_test:unittest",
    "unittest/medialibrary_thumbnail_service_test:unittest",
    "unittest/medialibrary_uri_sensitive_operations_test:unittest",
    "unittest/medialibrary_uri_test:unittest",
    "unittest/medialibrary_utils_test:unittest",
    "unittest/medialibrary_vision_test:unittest",
    "unittest/medialibrary_visitor_db_test:unittest",
    "unittest/mediascanner_test:unittest",
    "unittest/moving_photo_impl_test:unittest",
    "unittest/moving_photo_test:unittest",
    "unittest/notify_test:Notifytest",
    "unittest/photo_album_test:PhotoAlbumTest",
    "unittest/photo_day_month_year_operation_test:unittest",
    "unittest/portrait_album_update_test:PortraitAlbumUpdateTest",
    "unittest/media_library_cloud_sync_service_test:unittest",
    "unittest/media_library_cloud_sync_client_test:unittest",
    "unittest/medialibrary_analysis_progress_test:unittest",
  ]

  if (defined(global_parts_info.hdf_drivers_interface_usb) &&
      media_library_feature_mtp) {
    deps += [ "unittest/medialibrary_mtp_test:unittest" ]
  }

  if (media_library_feature_back_up) {
    deps += [
      "unittest/medialibrary_backup_clone_test:unittest",
      "unittest/medialibrary_backup_test:unittest",
    ]
  }
}
