# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

MEDIA_LIB_BASE_DIR = "//foundation/multimedia/medialibrary_standard"
MEDIA_LIB_INNERKITS_DIR = "$MEDIA_LIB_BASE_DIR/frameworks/innerkitsimpl"
MEDIA_LIB_KITS_DIR = "$MEDIA_LIB_BASE_DIR/frameworks/kitsimpl"

config("mediadataext_ability_public_config") {
  include_dirs = [
    "$MEDIA_LIB_KITS_DIR/media_service_extension/include",
    "$MEDIA_LIB_BASE_DIR/interfaces/innerkits/native/include",
    "$MEDIA_LIB_INNERKITS_DIR/media_library/include",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/ohos/aafwk/content",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager/include",
    "//foundation/aafwk/aafwk/standard/interfaces/innerkits/runtime/include",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/include",
    "//foundation/communication/ipc/ipc/native/src/napi/include",
    "//foundation/aafwk/standard/interfaces/kits/napi/aafwk/inner/napi_common",
    "//foundation/aafwk/standard/interfaces/innerkits/dataobs_manager/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core/include/bundlemgr",
    "//foundation/aafwk/standard/interfaces/innerkits/app_manager/include/appmgr",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core/include/appmgr",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//foundation/distributeddatamgr/appdatamgr/interfaces/innerkits/native_rdb/include",
    "//foundation/distributeddatamgr/appdatamgr/frameworks/innerkitsimpl/native_rdb/include",
    "//foundation/distributeddatamgr/appdatamgr/frameworks/innerkitsimpl/native_appdatafwk/include",
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/distributeddata/include/",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler/include",
    "//foundation/multimedia/image_standard/interfaces/innerkits/include/",
    "//foundation/communication/dsoftbus/interfaces/kits/bus_center",
    "//foundation/communication/dsoftbus/interfaces/kits/common",
    "//foundation/distributedschedule/safwk/services/safwk/include",
    "//foundation/distributedhardware/devicemanager/interfaces/inner_kits/native_cpp/include",
    "//foundation/multimedia/media_standard/interfaces/innerkits/native/media/include/",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "//third_party/json/include",
  ]
  include_dirs += [ "//third_party/openssl/include/" ]

  if (target_cpu == "arm") {
    cflags = [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("media_service_extension") {
  install_enable = true

  sources = [
    "src/mediadata_connection.cpp",
    "src/mediadata_proxy.cpp",
    "src/mediadata_stub.cpp",
    "src/mediadata_stub_impl.cpp",
    "src/mediadata_helper.cpp",
    "src/mediadata_uv_queue.cpp",
  ]

  public_configs = [ ":mediadataext_ability_public_config" ]
  cflags = [ "-DOLD_MEDIA_STD_API" ]

  deps = [
    "$MEDIA_LIB_BASE_DIR/services/media_scanner_service/client:media_scanner_client",
    "$MEDIA_LIB_INNERKITS_DIR/media_library:media_library",
    "$MEDIA_LIB_INNERKITS_DIR/media_library:media_thumbnail_helper",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/runtime:runtime",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/aafwk/standard/services/abilitymgr:abilityms",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/distributeddata:distributeddata_inner",
    "//foundation/distributedhardware/devicemanager/interfaces/inner_kits/native_cpp:devicemanagersdk",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/aafwk/standard/interfaces/innerkits/dataobs_manager:dataobs_manager",
    "//utils/native/base:utils",
  ]
  deps += [ "//third_party/openssl:libcrypto_static" ]

  external_deps = [
    "ability_base:zuri",
    "access_token:libaccesstoken_sdk",
    "bytrace_standard:bytrace_core",
    "hiviewdfx_hilog_native:libhilog",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ipc:ipc_core",
    "multimedia_media_standard:media_client",
    "native_appdatamgr:native_appdatafwk",
    "native_appdatamgr:native_dataability",
    "native_appdatamgr:native_rdb",
    "samgr_standard:samgr_proxy",
  ]

  subsystem_name = "multimedia"
  part_name = "multimedia_media_library_standard"
}
